--- a/now.json
+++ b/now.json
@@ -1,10 +1,11 @@
 {
   "version": 2,
-  "alias":"amazingreviews.now.sh",
   "name": "amazingreviews",
   "builds": [
-    { "src": "src/index.js", "use": "@now/node-server" },
-    { "src": "src/scrapers/*.js", "use": "@now/node" }
+    { 
+      "src": "src/**/*.js", 
+      "use": "@now/node-server"
+    }
   ],
   "routes": [
     { "src": "/(.*)", "dest": "src/index.js" }
