--- a/package.json
+++ b/package.json
@@ -4,38 +4,36 @@
   "description": "Use a Amazon product URL to scrape the reviews and return them to the requestor.",
   "main": "src/index.js",
   "scripts": {
-    "start": "node ./src/index.js",
+    "start": "NODE_ENV=production node ./src/index.js",
+    "fake-build": "cp -rf ./src/scrapers /tmp",
+    "fake-now-build": "npm run build",
     "test": "echo \"Error: no test specified\" && exit 1",
-    "deploy-now": "now && now alias && now rm amazingreviews --safe --yes",
-    "deploy-heroku": ""
+    "deploy-now": "now -f && now alias && now rm amazingreviews --safe --yes",
+    "deploy-heroku": "",
+    "deploy-gcloud": "gcloud deploy",
+    "logs-gcloud": "gcloud app logs tail -s default",
+    "logs-now": "now logs amazingreviews.now.sh"
   },
   "author": "",
   "license": "ISC",
   "dependencies": {
-    "amazon-scraper": "0.0.4",
-    "axios": "^0.18.0",
-    "body-parser": "^1.18.3",
-    "cheerio": "^1.0.0-rc.2",
     "express": "^4.16.4",
     "mathjs": "^5.3.0",
     "puppeteer": "^1.10.0",
-    "sentiment": "^5.0.1",
     "yargs": "^12.0.5"
   },
   "engines": {
-    "node": "10.5.0"
+    "node": "^10.0.0"
   },
   "files": [
     "src/**/*"
   ],
   "now": {
     "engines": {
-      "node": "10.5.0"
+      "node": "^10.0.0"
     }
   },
-  "devDependencies": {
-    "heroku": "^7.19.4"
-  },
+  "devDependencies": {},
   "buildpacks": [
     {
       "url": "https://github.com/jontewks/puppeteer-heroku-buildpack.git"
